--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav class="nav-links">
                 <a class="nav-link" href="#About">About</a>
                 <a class="nav-link" href="#Experience">Experience</a>
-                <a class="nav-link" href="https://tejanshrana.hashnode.dev/" target="_blank"
+                <a class="nav-link" href="https://blog.tejanshrana.com/" target="_blank"
                     rel="noopener noreferrer">Blog</a>
                 <a class="nav-link" href="#Testimonials">Testimonials</a>
                 <a class="nav-link" href="#Contact">Contact</a>
