[Footer] : updated twitch link

--- a/index.html
+++ b/index.html
@@ -535,8 +535,8 @@
                             class="fab fa-linkedin"></i></a></p>
                 <p><a href="https://twitter.com/TejanshRana" target="_blank" rel="noopener noreferrer"><i
                             class="fab fa-twitter"></i></a></p>
-                <p><a href="https://www.instagram.com/tejanshrana/" target="_blank" rel="noopener noreferrer"><i
-                            class="fab fa-instagram"></i></a></p>
+                <p><a href="https://www.twitch.tv/tejanshrana" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-twitch"></i></a></p>
                 <p>|</p>
                 <p id="copyright">Tejansh Rana © 2021</p>
             </div>
